add read chatRoom lists - find chatRooms(Lost, Found) containing owner's userId. query method by a userId - return ChatRoomList with lostChatRoom List and foundChatRoom List